--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ header nav a:hover {
 
 .posts {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  text-align: center;
   font-size: 24px;
   width: 620px;
   margin: 50px auto;
